# hive-rust

./: Cargo.toml  LICENSE-MIT  Makefile  README.md
hive/: Cargo.toml  build.rs
hive/src/service/: rpc.rs
hive/src/service/rpc/: thrift.rs
hive/src/service/rpc/thrift/: t_c_l_i_service.rs  transport.rs
hive/src/service/rpc/thrift/transport/: plain_client.rs  sasl.rs
hive/thrift/: TCLIService.thrift
