[workspace]
resolver = "2"
members = ["hive"]

[workspace.package]
version = "0.0.1"
authors = ["InnoRealm"]
edition = "2021"
description = "Hive Rust"
repository = "https://github.com/innorealm/hive-rust"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.80"
byteorder = "1.5.0"
thrift = "0.17.0"
